--- a/index.html
+++ b/index.html
@@ -196,16 +196,14 @@
   };
 
   var getWizardX = function(width) {
-    return width * 0.5;
+    return width * 0.5 - wizardWidth / 2;
   };
 
-  getWizardX();
   
   var getWizardY = function(height) {
-    return height * (2/3);
+    return height * (1/2);
   };
 
-  getWizardY();
 </script>
 <script src="js/game.js"></script>
 
