--- a/index.html
+++ b/index.html
@@ -199,12 +199,13 @@
     return width * 0.5 - wizardWidth / 2;
   };
 
-  
+
   var getWizardY = function(height) {
     return height * (1/2);
   };
 
 </script>
+<script src = "js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
